--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
                     <ul type="bullet">
                         <li>*Certified for attending INTERNSHIP in <b>BRAKES INDIA PVLtd.</b> .</li>
                       
-                        <li>“Certified for a two weeks Industrial Program on <b>ELECTRIC VEHICLE DEVELOPMENT </b>(single seater off-road vehicle) conducted by AUTOBOT INDIA, Bangalore.</li>
-                        <li>•Participated in <b>ENDURO STUDENT INDIA 2018</b> as a team TEAM BLITZKRIEG representing our BAJA vehicle.</li>
-                        <li>•Third (BRONZE) in <b>Anna University Inter-Zonal Tournaments</b> 2017-18(KHO-KHO)</li>
-                        <li>•Winners in the <b>Anna University Zonal Tournaments</b> 2016,2017,2018 (KHO-KHO) </li>
+                        <li>Â“Certified for a two weeks Industrial Program on <b>ELECTRIC VEHICLE DEVELOPMENT </b>(single seater off-road vehicle) conducted by AUTOBOT INDIA, Bangalore.</li>
+                        <li>Â•Participated in <b>ENDURO STUDENT INDIA 2018</b> as a team TEAM BLITZKRIEG representing our BAJA vehicle.</li>
+                        <li>Â•Third (BRONZE) in <b>Anna University Inter-Zonal Tournaments</b> 2017-18(KHO-KHO)</li>
+                        <li>Â•Winners in the <b>Anna University Zonal Tournaments</b> 2016,2017,2018 (KHO-KHO) </li>
                     </ul>
             </div><!-- / container -->
         </section>
